Fix margin on mobile

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -12,4 +12,4 @@ $codeBgColor = #282c34
   display: none
 
 .hero
-  margin: 150px
+  margin: 150px 0
